# termverify

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
changelog.d/: 114-jsonl-control-transport-design.changed.md  160-release-pipeline.added.md  163-changelog-fragments.added.md  164-replay-subject-validation-errors.changed.md  165-key-v1-punctuation-bases.changed.md  168-prepush-fail-fast.changed.md  169-conpty-esc-input-reader-disclosure.fixed.md  173-channel-tagged-delivery.changed.md  173-control-v1-slice1.added.md  173-control-v1-slice2.added.md  178-teardown-forced-removed.removed.md  183-agent-reviews-docs.changed.md  184-prototyping-stage-governance.changed.md  185-release-status-truth.fixed.md  186-doc-hygiene.fixed.md  187-jsonl-read-buffer-bound.fixed.md  188-jsonl-job-object-checks.fixed.md  189-control-lone-surrogates.fixed.md  191-authority-polarity.changed.md  README.md
docs/developer-guide/: adapter-authors.md  (+7 more)
scripts/: build_site.py  check_installed_package.py  check_published_schema.py  collect_changelog.py  generate_timezone_registry.py  validate_evidence_governance.py  validate_knowledge_frontmatter.py
tests/: test_adapter.py  test_collect_changelog.py  test_comparator.py  test_conpty_adapter.py  test_conpty_binding.py  test_conpty_epochs.py  test_conpty_integration.py  test_control_codec.py  test_control_coverage.py  test_cooperation_ports.py  test_direct.py  test_enforcement_tier.py  test_evidence.py  test_internal_v1.py  test_jsonl_adapter.py  test_jsonl_binding.py  test_jsonl_coverage.py  test_jsonl_integration.py  test_key_encoding_v1.py  test_package.py  test_public_surface.py  test_recorder.py  test_recorder_conformance.py  test_replay.py  test_schema_access.py  test_site_publication.py  test_timezone_registry_generation.py  test_transcript.py  test_transcript_lifecycle.py  test_transcript_schema.py  test_validate_evidence_governance.py  test_validate_knowledge_frontmatter.py  test_vt.py
(+96 files in other folders)
