[project]
name = "termverify"
version = "0.1.0"
description = "Protocol-driven verification for autonomous terminal applications."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Matthias Hölzl", email = "tc@xantira.com" },
]
keywords = ["agents", "testing", "terminal", "tui", "verification"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "rfc8785>=0.1.4",
]

[project.urls]
Homepage = "https://github.com/hoelzl/termverify"
Repository = "https://github.com/hoelzl/termverify"
Issues = "https://github.com/hoelzl/termverify/issues"

[dependency-groups]
dev = [
    "hypothesis>=6.156.2",
    "jsonschema>=4.23",
    "mypy>=1.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
    "ruff>=0.11",
    "types-jsonschema>=4.23",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["termverify"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# No-regression ratchet floor: integer floor of the reviewed observed total
# (94.43% on 2026-07-17). Raise only for sustained durable coverage; lowering
# requires explicit owner review (docs/developer-guide/development.md).
# precision = 2 makes the comparison a strict floor instead of granting a
# hidden half-point of integer rounding grace.
fail_under = 94
precision = 2

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
files = ["src", "tests", "scripts"]
python_version = "3.12"
strict = true
warn_unreachable = true
